# BasicApp

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
ext/CMake/: FindOptix.cmake
src/: CMakeLists.txt  main.cpp
